--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 logs
 *.log
 npm-debug.log*
+package-lock.json
 
 # Runtime data
 pids
@@ -37,7 +38,6 @@ node_modules
 jspm_packages
 build
 .happypack
-yarn.lock
 .vscode/*
 dll
 
